--- a/presskit.html
+++ b/presskit.html
@@ -10,6 +10,10 @@
   <link rel="stylesheet" href="css/components.css">
   <link rel="stylesheet" href="css/pages/presskit.css">
   <link rel="stylesheet" href="css/responsive.css">
+
+  <link rel="canonical" href="https://manupavez.com/" />
+  <link rel="icon" href="logos/CUBO%20BLANCO%20MP.png" />
+
   <script defer src="js/supabase-config.js"></script>
   <script type="module" src="js/main.js"></script>
 </head>
@@ -60,16 +64,16 @@
     <h1>PRESSKIT</h1>
     <h2>Biografía Profesional</h2>
     <p>
-      MANU PAVEZ es un DJ y productor argentino con años de trabajo minucioso en estudio, llevando su frequency storytelling al corazón del progressive house. 
-      Su firma aparece en sellos de referencia como Sound Avenue, Mango Alley, Droid9 South America, 3rd Avenue, Coral Tide y Traful, consolidando un perfil moderno, exportable y curado. 
-      En pista, construye viajes narrativos que crecen del warm-up elegante al prime time hipnótico, con bajos precisos, texturas melódicas y una tensión que sostiene la pista sin excesos.
+      <strong>MANU PAVEZ</strong> un DJ y productor argentino con años de trabajo minucioso en estudio, llevando su frequency storytelling al corazón del progressive house. 
+      Su firma aparece en sellos de referencia como <strong>Sound Avenue, Mango Alley, Droid9 South America, 3rd Avenue, Coral Tide y Traful</strong>, consolidando un perfil moderno, exportable y curado. 
     </p>
     <p>
-      Su música y su número cuentan con el aval de figuras de primera línea: Hernán Cattáneo, Nick Warren y Mariano Mellino han respaldado su sonido; 
-      además, compartió cabina e hizo warm-ups para Graziano Raffa, confirmando tracción real en booth y programación. 
-      Con releases consistentes y una propuesta artística clara, Manu Pavez se proyecta como joven promesa del progresivo sudamericano: 
+      Su música y su número cuentan con el aval de figuras de primera línea: <strong>Hernán Cattáneo, Nick Warren y Mariano Mellino han respaldado su sonido; </strong>
+      además, compartió cabina e hizo warm-ups para <strong>Roy Rosenfeld, Alex O'Rion, Soundexile, Graziano Raffa</strong>, confirmando tracción real en booth y programación. 
+      Con releases consistentes y una propuesta artística clara, <strong>Manu Pavez se proyecta como joven promesa del progresivo sudamericano: </strong>
       confiable para promotores, atractivo para audiencias exigentes y listo para escalar line-ups de salas boutique y festivales internacionales.
     </p>
+
   </section>
 
   <!-- SLIDER -->
