CORRECCIONES PRESSKIT.HTML

--- a/presskit.html
+++ b/presskit.html
@@ -68,7 +68,7 @@
       Su firma aparece en sellos de referencia como <strong>Sound Avenue, Mango Alley, Droid9 South America, 3rd Avenue, Coral Tide y Traful</strong>, consolidando un perfil moderno, exportable y curado. 
     </p>
     <p>
-      Su música y su número cuentan con el aval de figuras de primera línea: <strong>Hernán Cattáneo, Nick Warren y Mariano Mellino han respaldado su sonido; </strong>
+      Su música y su número cuentan con el aval de figuras de primera línea: <strong>Sahar Z, Graziano Raffa, Ezequiel Arias, John Cosani, Hernán Cattáneo, Nick Warren y Mariano Mellino han respaldado su sonido; </strong>
       además, compartió cabina e hizo warm-ups para <strong>Roy Rosenfeld, Alex O'Rion, Soundexile, Graziano Raffa</strong>, confirmando tracción real en booth y programación. 
       Con releases consistentes y una propuesta artística clara, <strong>Manu Pavez se proyecta como joven promesa del progresivo sudamericano: </strong>
       confiable para promotores, atractivo para audiencias exigentes y listo para escalar line-ups de salas boutique y festivales internacionales.
