--- a/GROOVIN2026.html
+++ b/GROOVIN2026.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
 
-  <title>GROOVIN Producciones — 2026</title>
+  <title>Groovin' OPEN AIR — 2026</title>
   <meta name="description" content="Flyer oficial GROOVIN Producciones 2026: 17/01/26 — Pergamino — Open Air — Lineup y horario." />
   <meta name="robots" content="index,follow" />
 
